<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_textview">Order</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Name</string>
    <string name="address_label">Address</string>
    <string name="type_your_address">Type Your Address</string>
    <string name="address_label2">Address line 2</string>
    <string name="address_label3">Address line 3</string>
    <string name="phone_labe">Phone:</string>
    <string name="enter_phone_hint">Enter your number</string>
    <string name="choose_delivery_method">Choose a delivery method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
</resources>
